--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "quickstart-lib",
+  "name": "ngx-nav",
   "version": "1.0.0",
-  "description": "Library QuickStart package.json from the documentation, supplemented with testing support",
-  "main": "./bundles/quickstart-lib.umd.js",
-  "module": "./quickstart-lib.es5.js",
-  "es2015": "./quickstart-lib.js",
-  "typings": "./quickstart-lib.d.ts",
+  "description": "Simple top bar and sidebar with flexbox",
+  "main": "./bundles/ngx-nav.umd.js",
+  "module": "./ngx-nav.es5.js",
+  "es2015": "./ngx-nav.js",
+  "typings": "./ngx-nav.d.ts",
   "author": "",
   "license": "MIT",
   "repository": {},
@@ -15,23 +15,23 @@
   },
   "scripts": {
     "clean": "rimraf out-tsc dist/*",
-    "prebuild": "npm run clean",
+    "prebuild": "yarn run clean",
     "build": "node build.js",
     "build-demo": "tsc -p src/demo/",
     "build-demo:watch": "tsc -p src/demo/ -w",
     "serve": "lite-server -c=bs-config.json",
-    "prestart": "npm run build-demo",
-    "start": "concurrently \"npm run build-demo:watch\" \"npm run serve\"",
+    "prestart": "yarn run build-demo",
+    "start": "concurrently \"yarn run build-demo:watch\" \"yarn run serve\"",
     "build-test": "tsc -p src/lib/tsconfig.spec.json",
     "build-test:watch": "tsc -p src/lib/tsconfig.spec.json -w",
-    "pretest": "npm run build-test",
-    "test": "concurrently \"npm run build-test:watch\" \"karma start karma.conf.js\"",
-    "pretest:once": "npm run build-test",
+    "pretest": "yarn run build-test",
+    "test": "concurrently \"yarn run build-test:watch\" \"karma start karma.conf.js\"",
+    "pretest:once": "yarn run build-test",
     "test:once": "karma start karma.conf.js --single-run",
-    "preintegration": "npm run build && cd integration && npm run clean && npm install",
-    "integration": "npm run integration:aot && npm run integration:jit",
-    "integration:jit": "cd integration && npm run e2e",
-    "integration:aot": "cd integration && npm run e2e:aot",
+    "preintegration": "yarn run build && cd integration && yarn run clean && yarn install",
+    "integration": "yarn run integration:aot && yarn run integration:jit",
+    "integration:jit": "cd integration && yarn run e2e",
+    "integration:aot": "cd integration && yarn run e2e:aot",
     "lint": "tslint ./src/**/*.ts -t verbose"
   },
   "peerDependencies": {
